--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <head>Test</head>
-  
+ <head>
+	<title>Test</title>
+</head>
+<body>
+	<header></header>
+</body>
 </html>
