added meta tag to <head> and document structure with some test text to the <body>

--- a/index.htm
+++ b/index.htm
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
- <head>
-	<title>Test</title>
+<head>
+ <meta charset="utf-8" lang="en"/>
+<title>Test</title>
 </head>
 <body>
-	<header></header>
+ <header></header>
+ <nav></nav>
+ <main>
+  <p>
+   Andrew, test push.
+  </p>
+ </main>
+ <footer></footer>
 </body>
 </html>
