--- a/index.htm
+++ b/index.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8" lang="en"/>
@@ -41,7 +41,7 @@
 		</div>
 	</main>
 	<footer>
-		<h3>Thanks for Playing!</h3>
+		<h3>Thanks for Playing!<br />Keep Tinkering!</h3>
 	</footer>
 </body>
 </html>
