editing the homepage

--- a/index.htm
+++ b/index.htm
@@ -41,7 +41,7 @@
 		</div>
 	</main>
 	<footer>
-		<h3>Thanks for Playing!<br />Keep Tinkering!</h3>
+		<h3>Thanks for Playing!</h3>
 	</footer>
 </body>
 </html>
